# Yoink

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-backend.yml  deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/tests/: test_api_integration.py  test_converter.py  test_encoder.py  test_jobs.py  test_mapper.py  test_rename_api.py  test_transparent_render_api.py
backend/yoink/: __init__.py  __main__.py  converter.py  encoder.py  extractor.py  mapper.py  pipeline.py
backend/yoink/api/: app.py  auth.py  jobs.py  models.py  routes.py  storage.py  transparent_render.py  worker.py
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/callback/: route.ts
frontend/src/app/jobs/[id]/: page.tsx
frontend/src/components/: category-filter.tsx  component-card.tsx  dropzone.tsx  feature-cards.tsx  job-card.tsx  navbar.tsx  page-jump.tsx  processing-overlay.tsx  sensitivity-slider.tsx
frontend/src/lib/: api.ts
frontend/src/lib/supabase/: client.ts  middleware.ts
frontend/src/store/: useYoinkStore.ts
supabase/: schema.sql
